============================================================
=== 2017

1.9.2 (2017-07-04)
	Improve consensus dotplot computation (avoid accumulation of low
	  probability base pairs)
	Some cleanup

	1.9.2pre4
	Fix left and rightmost anchors (fixed local alignment); add unit tests
	Optimize maximization in innermost loop
	Add unit and program tests

	1.9.2pre3
	Make consensus structure / dotplot types independent [option
	  --consensus-structure alifold (current default) used to also
	  determine the computation of consensus dotplots. The consensus
	  dot plot is now independent (new default: no alifold consensus
	  dot plot).]

	fix strict semantics for anchor constraints
        fix compatibility '--keep-sequence-order' with anchor constraints

	1.9.2pre2
	mlocarna: write ps files (aln.ps, alirna.ps and if probabilistic,
          alidot.ps) from alifold call on result alignment to the
          results output directory;
          use alifold options --aln --color --mis
	fix mlocarna: find pw-aligner and pw-aligner-p executables in PATH

1.9.1 (2017-01-22)
	improve help and man pages for locarna, locarna_p, sparse;
	  refactor code for help text (string map for help text)
	  write text inserts for man pages, which are autogenerated from help
	fix bug in reading stockholm anchors
	remove parameters min_am_prob and min_bm_prob from locarna
	  and sparse CLIs;
	  they are useful only for locarna_p
	introduce strict semantics for anchor constraints
	  and make default (see mlocarna --relaxed-anchors)
	fix exparna_p output
	add mlocarna option to realign; support 'consensus'
	  constraint specifications

============================================================
=== 2016

1.9.0 (2016-Dec-26)
	add mlocarna option to load (default) configuration from file
	add mlocarna option to read anchor constraints from
	  bed-format specification
	add option --maxBPspan (analogous to ViennaRNA's maxBPspan)
	activate penalized option for mlocarna