@@ -1,4 +1,9 @@
 ============================================================
+=== 2018
+
+	Remove perl prototype specs in to avoid perl 5.18 incompatibility
+
+============================================================
 === 2017
 
 1.9.2 (2017-07-04)
